# Action-recognition

./: pyproject.toml
Notebooks/: train_model.ipynb
src/data/: ucf101_dataset.py
src/models/: model_factory.py
src/train/: trainer.py
src/utils/: data_utils.py
