[project]
name = "action-recognition"
version = "0.1.0"
description = "Action recognition models for UCF101 dataset"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pytorchvideo>=0.1.5",
    "numpy>=1.22.0",
    "pyyaml>=6.0",
    "opencv-python>=4.7.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "av>=10.0.0",  # For video decoding
    "wandb>=0.15.0",  # For experiment tracking
    "timm>=0.9.2",  # For transformer-based models
    "einops>=0.6.0",  # For tensor manipulation
    "decord>=0.6.0",  # Fast video loading
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "black>=23.3.0",
    "flake8>=6.0.0",
    "mypy>=1.3.0",
    "isort>=5.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
